@@ -1,0 +1,71 @@
+---
+sidebar: sidebar 
+permalink: manage-service-accounts.html 
+keywords: service account, service accounts, manage account, create service account, delete service account, workload factory service account 
+summary: Você pode gerenciar sua conta para atender às suas necessidades criando contas de serviço para fins de automação. 
+---
+= Gerenciar contas de serviço
+:hardbreaks:
+:allow-uri-read: 
+:nofooter: 
+:icons: font
+:linkattrs: 
+:imagesdir: ./media/
+
+
+[role="lead"]
+Crie contas de serviço para atuar como usuários de máquina que automatizam operações de infraestrutura. Você pode revogar ou alterar o acesso a contas de serviço a qualquer momento.
+
+.Sobre esta tarefa
+As contas de serviço são um recurso de alocação a vários clientes fornecido pelo BlueXP . Os administradores de contas criam contas de serviço, controlam o acesso e excluem contas de serviço. Você pode gerenciar contas de serviço no console do BlueXP  ou no console de fábrica do workload do BlueXP .
+
+Ao contrário do gerenciamento de contas de serviço no BlueXP , onde você pode recriar um segredo de cliente, a fábrica de carga de trabalho suporta apenas a criação e exclusão de contas de serviço. Se você quiser recriar um segredo de cliente para uma conta de serviço específica no console de fábrica da carga de trabalho do BlueXP , será necessário <<Eliminar uma conta de serviço,eliminar a conta de serviço>>, e depois <<Crie uma conta de serviço,crie um novo>>.
+
+As contas de serviço usam um ID de cliente e um segredo para autenticação em vez de uma senha. Os IDs e segredos do cliente são corrigidos até que o administrador da conta decida alterá-los. Para usar uma conta de serviço, você precisará do ID do cliente e do segredo para gerar o token de acesso ou não obterá acesso. Tenha em mente que os tokens de acesso são de curta duração e só podem ser usados por várias horas.
+
+.Antes de começar
+Decida se deseja criar uma conta de serviço no console do BlueXP  ou no console de fábrica da carga de trabalho do BlueXP . Há pequenas diferenças. As instruções a seguir descrevem como gerenciar contas de serviço no console de fábrica da carga de trabalho do BlueXP .
+
+Para gerenciar contas de serviço no BlueXP , link:https://docs.netapp.com/us-en/bluexp-setup-admin/concept-identity-and-access-management.html#how-bluexp-iam-works["Saiba mais sobre o gerenciamento de identidades e acesso do BlueXP "^] e link:https://docs.netapp.com/us-en/bluexp-setup-admin/task-iam-manage-members-permissions.html["Saiba como adicionar membros do BlueXP  IAM e gerenciar suas permissões"^].
+
+
+
+== Crie uma conta de serviço
+
+Quando você cria uma conta de serviço, a fábrica de carga de trabalho do BlueXP  permite copiar ou baixar uma ID de cliente e segredo de cliente para a conta de serviço. Esse par de chaves é usado para autenticação com a fábrica de carga de trabalho do BlueXP .
+
+.Passos
+. No console de fábrica da carga de trabalho, selecione o ícone *conta* e selecione *Contas de serviço*.
++
+image:screenshot-service-account.png["Captura de tela que mostra as opções do menu conta da interface de usuário da BlueXP  Workload Factory. Uma das opções são contas de serviço."]
+
+. Na página *Contas de Serviço*, selecione *criar conta de serviço*.
+. Na caixa de diálogo criar conta de serviço, insira um nome para a conta de serviço no campo *Nome da conta de serviço*.
++
+O *role* é pré-selecionado como *Account admin*.
+
+. Selecione *continuar*.
+. Copie ou baixe o ID do cliente e o segredo do cliente.
++
+O segredo do cliente é visível apenas uma vez e não é armazenado em nenhum lugar pela fábrica da carga de trabalho. Copie ou baixe o segredo e guarde-o em segurança.
+
+. Opcionalmente, você pode obter um token de acesso para a API de gerenciamento Auth0 executando uma troca de credenciais de cliente. O exemplo curl mostra como você pode pegar o ID do cliente e segredo e usar uma API para gerar o token de acesso que é limitado pelo tempo. O token fornece várias horas de acesso às APIs de fábrica da carga de trabalho do BlueXP .
+. Selecione *Fechar*.
+
+
+A nova conta de serviço é criada e listada na página Contas de Serviço.
+
+
+
+== Eliminar uma conta de serviço
+
+Exclua uma conta de serviço se você não precisar mais usá-la.
+
+.Passos
+. No console Workload Factory, selecione o ícone *Account* e selecione *Service Accounts*.
+. Na página *Contas de Serviço*, selecione o menu de três pontos e, em seguida, selecione *Excluir*.
+. Na caixa de diálogo Excluir conta de serviço, digite *delete* na caixa de texto.
+. Selecione *Excluir* para confirmar a exclusão.
+
+
+A conta de serviço é eliminada.
